# wavefile

./: CMakeLists.txt  README.md  initfile.yaml  local-build.cmd
app/: CMakeLists.txt
app/src/: main.cpp
lib/: CMakeLists.txt
lib/reader/: CMakeLists.txt
lib/reader/include/: reader.h
lib/reader/src/: reader.cpp
lib/writer/: CMakeLists.txt
lib/writer/include/: writer.h
lib/writer/src/: writer.cpp
src/: main.cpp
